tests: add crud tests