@@ -94,6 +94,27 @@
             <version>2.2.224</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Jersey Test Framework pour les tests REST -->
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework</groupId>
+            <artifactId>jersey-test-framework-core</artifactId>
+            <version>2.41</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+            <artifactId>jersey-test-framework-provider-grizzly2</artifactId>
+            <version>2.41</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Jersey Bean Validation pour les tests REST -->
+        <dependency>
+            <groupId>org.glassfish.jersey.ext</groupId>
+            <artifactId>jersey-bean-validation</artifactId>
+            <version>2.41</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
@@ -153,6 +174,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+                </configuration>
             </plugin>
             <!-- Plugin Tomcat 9 pour lancer l'application -->
             <plugin>
